# SimpleHexRiskGame

./: CMakeLists.txt  LICENSE  README.md  SimpleHexRiskGame  game.c
src/: ai.c  ai.h  battle.c  battle.h  board.c  board.h  defs.h  game.c  game.h  generator.c  generator.h  graphic.c  graphic.h  input.c  input.h  main.c  main.h  player.c  player.h  utility.c  utility.h
